--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         pip install -r requirements.txt
         pip install -r pipeline/pipeline_requirements.txt
+        pip install -r dashboard/dashboard_requirements.txt
     - name: Linting
       run: pylint . --fail-under 8
     - name: Testing
